# slowmath

./: .gitignore  CMakeLists.txt
lib/slowmath/: slowmath.cc  slowmath.h
scripts/: build_and_test
src/: driver.cc
test/: simple_tests.cc
